data/issues_nolabel/nolabel_test_16198.txt
Unable to build Tensorflow Benchmark model for Android

I've been trying to benchmark the model on mobile but I'm not able to build the model for Android. For desktop, I have been able to build and run the benchmark model.
The machine I'm using is a MacBook pro 15 inch with High Sierra and tensorflow v.1.4
I've been following the directions given at the following links:
(https://www.tensorflow.org/mobile/optimizing#how_to_profile_your_model
https://github.com/tensorflow/tensorflow/tree/r1.4/tensorflow/tools/benchmark)
Edit: Updated answer to the issue template
Have I written custom code

No custom code was written

OS Platform and Distribution

Mac OS High Sierra

TensorFlow installed from

Tensorflow installed from source

TensorFlow version

1.4

Bazel version

Bazel version 0.9.0

CUDA/cuDNN version

N/A

GPU model and memory

N/A

Exact command to reproduce
bazel build -c opt --cpu=armeabi-v7a \
  --crosstool_top=//external:android/crosstool \
  --host_crosstool_top=@bazel_tools//tools/cpp:toolchain \
  tensorflow/tools/benchmark:benchmark_model

Error message received
ERROR: /private/var/tmp/_bazel_abhisheksehgal/486c675b3107dc770b2281b905f670fe/external/highwayhash/BUILD:8:1: C++ compilation of rule '@highwayhash//:sip_hash' failed (Exit 1)
In file included from external/highwayhash/highwayhash/sip_hash.cc:15:
In file included from external/highwayhash/highwayhash/sip_hash.h:25:
external/highwayhash/highwayhash/state_helpers.h:76:3: error: use of undeclared identifier 'static_assert'; did you mean 'static_cast'?
  static_assert((kPacketSize & (kPacketSize - 1)) == 0, "Size must be 2^i.");
  ^
In file included from external/highwayhash/highwayhash/sip_hash.cc:15:
external/highwayhash/highwayhash/sip_hash.h:33:15: warning: alias declarations are a C++11 extension [-Wc++11-extensions]
  using Key = HH_U64[2];
              ^
external/highwayhash/highwayhash/sip_hash.h:104:22: warning: alias declarations are a C++11 extension [-Wc++11-extensions]
using SipHashState = SipHashStateT<2, 4>;
                     ^
external/highwayhash/highwayhash/sip_hash.h:105:24: warning: alias declarations are a C++11 extension [-Wc++11-extensions]
using SipHash13State = SipHashStateT<1, 3>;
                       ^
external/highwayhash/highwayhash/sip_hash.cc:20:13: warning: alias declarations are a C++11 extension [-Wc++11-extensions]
using Key = highwayhash::SipHashState::Key;
            ^
external/highwayhash/highwayhash/sip_hash.cc:21:15: warning: alias declarations are a C++11 extension [-Wc++11-extensions]
using Key13 = highwayhash::SipHash13State::Key;
              ^
5 warnings and 1 error generated.
Target //tensorflow/tools/benchmark:benchmark_model failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 2.060s, Critical Path: 1.60s
FAILED: Build did NOT complete successfully